--- a/style.css
+++ b/style.css
@@ -119,8 +119,8 @@ button{
 
 @media screen and (max-width:700px){
     body{
-        width:100vh;
-        height:100vh;
+        width:450px;
+        height:600px;
     }
     .content{
         background-color: white;
